2003-11-08  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3478022>: assertion failure while loading WMP content

        Reviewed by darin.

        * ChangeLog:
        * Plugins.subproj/WebNetscapePluginStream.m:
        (-[WebNetscapePluginConnectionDelegate connection:didReceiveResponse:]): Don't continue if the stream is cancelled in startStreamWithResponse.

2003-11-07  Richard Williamson   <rjw@apple.com>

	Fixed 3477067.  Use our case unicode conversion routines.

        Reviewed by Ken.

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (toUpper):

2003-11-06  Richard Williamson   <rjw@apple.com>

	Fixed 3476393.  Call scrollPoint: recursively up the view hierarchy to ensure point is visible.

        Reviewed by Ken.

        * Misc.subproj/WebNSViewExtras.h:
        * Misc.subproj/WebNSViewExtras.m:
        (-[NSView _web_scrollPointToVisible:fromView:]):
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView scrollPoint:]):

=== Safari-113 ===

2003-11-05  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3473913 -- host names in simple mailto URLs are not getting encoded/decoded correctly yet

        * Misc.subproj/WebNSURLExtras.m:
        (applyHostNameFunctionToMailToURLString): Handle case where host name is at the end of the string.
        (applyHostNameFunctionToURLString): Add the # character to the set of characters that can end
        a domain name.

2003-11-05  Richard Williamson   <rjw@apple.com>

	Fixed 3413067, 3405797, 3456877
	Use ATSUI to render Arabic and Hebrew.

        Reviewed by John.

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (shouldUseATSU):

2003-11-05  John Sullivan  <sullivan@apple.com>

	- fixed <rdar://problem/3469791>: Bigger/Smaller commands are 
	disabled for HTML Mail in separate window (w/WebKit-111)

        Reviewed by Darin.

        * WebView.subproj/WebFrameView.m:
        (-[WebFrameView acceptsFirstResponder]):